--- a/style.css
+++ b/style.css
@@ -65,7 +65,20 @@
 }
 
 .part2{
-    /* background-image: url(img/bg.png); */
+    /* background-image: linear-gradient(180deg, #ffffff 0%, #FFFFFF 100% ),url(img/bg.png); */
+    /* background: url('img/bg.png');
+    background: linear-gradient(url(img/bg.png),180deg, #da5f5f 0%, #FFFFFF 100%, url(img/bg.png));
+    
+    background-size: 1956px 642px;
+    background-size: contain; */
+    background-position-y:375px ;
+    background-image: url(img/bg.png), linear-gradient(180deg, #ffffff49 0%, #ffffff 70%);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+
+    
+    
+    
     width: 1920px;
     height: 1022px;
     margin-top: 123px;
@@ -613,6 +626,83 @@
     border-radius: 10px;
     border: 1px;
     border: 1px solid #E4E4E7
+
+}
+.prt-3-5-1-2-1{
+    width: 111px;
+    height: 216px;
+    padding: 0px, 0px, 0px, 0px;
+    border: 2px solid red;
+
+}
+
+.prt-3-5-1-2-2{
+    width: 137px;
+    height: 216px;
+    padding: 0px, 0px, 0px, 0px;
+    border: 2px soild violet;
+}
+
+.txt-prt3 {
+    width: 71px;
+    height: 18px;
+}
+.list-txt-3{
+    margin-top: 30px;
+    width: 111px;
+    height: 168px;
+    top: 48px;
+    border: 2px solid blue;
+    /* align-content: space-between; */
+}
+
+.list-txt-4{
+    margin-top: 30px;
+    width: 137px;
+    height: 168px;
+    top: 48px;
+    left: 152px;
+    border: 2px solid blue;
+}
+
+.list-txt-3 li{
+    border: 2px solid red;
+    list-style: none;
+    /* font-family: Outfit; */
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-left: 0px;
+    margin-top: 10px;
+    color: #2C230E;
+}
+.list-txt-4 li{
+    border: 2px solid red;
+    list-style: none;
+    /* font-family: Outfit; */
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+
+    /* //styleName: Semi-bold/16px; */
+    /* font-family: Poppins; */
+    color:#2C230E;
+
+    margin-top: 10px;
+
+}
+.txt-prt3 h5{
+    /* font-family: Outfit; */
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color:#A29E94;
 
 }
 
