--- a/style.css
+++ b/style.css
@@ -75,15 +75,11 @@
     background-image: url(img/bg.png), linear-gradient(180deg, #ffffff49 0%, #ffffff 70%);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
-
-    
-    
-    
     width: 1920px;
     height: 1022px;
     margin-top: 123px;
     left: 1920px;
-    rotate: 180 deg;
+    /* rotate: 180 deg; */
     /* border: 2px solid black; */
     /* background: linear-gradient(#FFFFFF 100% 0%); */
 }
@@ -226,6 +222,7 @@
     margin-top: 80px;
     border: 2px solid blue;
 }
+
 .prt-3-1{
     width: 1596px;
     height: 965px;
@@ -233,6 +230,7 @@
     /* padding-left: 60px; */
     border: 2px solid black;
 }
+
 .bx-3-2{
     width: 1596px;
     height: 774px;
@@ -260,7 +258,7 @@
     width: 528px;
     height: 40px;
     gap: 10px;
-    angle: -0 deg;
+    /* angle: -0 deg; */
     margin-left: 45px;
     border: none;
     border-radius: 5px;
@@ -280,7 +278,7 @@
     height: 662px;
     gap: 32px;
     margin-top: 32px;
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
 }
 .bx322-1{
     width: 382px;
@@ -423,6 +421,93 @@
     border: 2px solid blue;
     margin-left: 32px;
 }
+.bx322-2 h3{
+    /* font-family: Lexend; */
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+    color:#101828;
+
+}
+#head3{
+    margin-top: 24px;
+}
+.bx322-2-1{
+    width: 1182px;
+    height: 376px;
+    gap: 16px;
+    margin-top: 16px;
+    border: 2px solid black;
+}
+.bx322-2-2{
+    width: 1182px;
+    height: 180px;
+    gap: 32px;
+    top margin-top: 16px;
+}
+
+.bx322-2-1-1{
+    width: 1182px;
+    height: 180px;
+    gap: 16px;
+    border: 2px solid blue;
+    margin-bottom: 16px;
+
+}
+.bx322211-1{
+    width: 583px;
+    height: 180px;
+    padding: 20px;
+    border-radius: 8px;
+    /* border: 1px; */
+    border: 1px solid #E2E1DE;
+    background-color: #FFFFFF;
+    margin-right: 16px;
+    padding: 20px 20px;
+    gap: 12px;
+
+}
+.bx322211-1-1{
+    width: 543px;
+    height: 140px;
+    gap: 12px;
+    border: 2px solid red;
+
+}
+.bx322211-1-1 img{
+    margin-right: 12px;
+}
+
+.bxxxxx-1{
+    width: 165px;
+    height: 132px;
+    gap: 3px;
+    border: 2px solid black;
+
+}
+
+.bxxxxx-1 h5{
+    font-family: Outfit;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 23px;
+    letter-spacing: 0px;
+    text-align: left;
+    color:#101828;
+    margin-bottom: 3px;
+}
+.bxxxxx-1 h6{
+    font-family: Outfit;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #6C6657;
+    margin: 3px;    
+}
 .bx-3-1{
     width: max-content;
     height: 131px;
@@ -450,9 +535,9 @@
     text-align: center;
 }
 
-.prt3-1 {
-    /* border: 2px solid red; */
-}
+/* .prt3-1 {
+    border: 2px solid red;
+} */
 .prt3-2{
     margin-top: 32px;
     /* border:2px solid blue; */
