--- a/style.css
+++ b/style.css
@@ -797,6 +797,16 @@
     /* border: 2px solid grey; */
 }
 
+.crd-11 input{
+    width: 601px;
+    height: 48px;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    border: 1px
+    gap: 8px;
+    border: 1px solid #D0D5DD;
+}
+
 .inp2 p{
     margin-bottom: 6px;
 }
